--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,43 @@
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/phaser/3.87.0/phaser.min.js"></script>
 	<script>
+
+let player_num = 0;
+
+let player1, player2;
+
+let ws = new WebSocket('ws://10.40.1.49:7777');
+
+ws.onmessage = function (msg)
+{
+	console.log(msg.data);
+
+	let data = JSON.parse(msg.data);
+
+	if (data.player_num != null)
+	{
+		player_num = data.player_num;
+		console.log("somos el jugador "+player_num);
+	}
+	else if (data.y != null)
+	{
+		if (player_num == 1)
+		{
+			player2.y = data.y;
+		}
+		else if (player_num == 2)
+		{
+			player1.y = data.y;
+		}
+	}
+	else if (data.by != null)
+	{
+		ball.x = data.bx;
+		ball.y = data.by;
+	}
+};
+
+
 let win_w=800, win_h=450;
 
 let config = {
@@ -20,11 +57,12 @@ let config = {
 
 let game = new Phaser.Game(config);
 
-let player1, player2;
 let player1_x=32, player1_y=225;
 let player2_x=768, player2_y=225;
 
 let players_w=16, players_h=96;
+
+let player1_points, player2_points;
 
 let ball;
 let ball_x=400, ball_y=225;
@@ -38,22 +76,96 @@ function preload ()
 
 function create ()
 {
+	this.player1_points = 0;
+	this.player2_points = 0;
 	player1 = this.add.rectangle(player1_x, player1_y, players_w, players_h, 0xffffff);
 	player2 = this.add.rectangle(player2_x, player2_y, players_w, players_h, 0xffffff);
 	ball = this.add.rectangle(ball_x, ball_y, ball_w, ball_h, 0xffff00);
+	this.player1InputUP = this.input.keyboard.addKey(Phaser.Input.Keyboard.KeyCodes.UP);
+	this.player1InputDOWN = this.input.keyboard.addKey(Phaser.Input.Keyboard.KeyCodes.DOWN);
+
+	this.player1PointsText = this.add.text(200, 40, `Player1: ${this.player1_points}`, { font: '16px Arial', fill: '#FFFFFF'});
+
+	this.player2PointsText = this.add.text(500, 40, `Player2: ${this.player2_points}`, { font: '16px Arial', fill: '#FFFFFF'});
+}
+
+function ball_reset()
+{
+	ball.y = 225;
+	ball.x = 400;
+
+	ball_x_dir = -ball_x_dir;
 }
 
 function update ()
 {
-	ball.x += ball_x_dir;
-	ball.y += ball_y_dir;
+	if (player_num == 0)
+		return;
+	if (player_num == 1)
+	{
+		ball.x += ball_x_dir;
+		ball.y += ball_y_dir;
+
+		if (ball.x > win_w)
+		{
+			this.player1_points += 1;
+			this.player1PointsText.setText(`Player1: ${this.player1_points}`);
+			ball_reset();
+		}
+
+		if (ball.x < 0) 
+		{
+        	this.player2_points += 1;
+	    	this.player2PointsText.setText(`Player2: ${this.player2_points}`);
+			ball_reset();
+		}
+
+		if (ball.y > win_h || ball.y < 0)
+			ball_y_dir = -ball_y_dir;
+
+		
+		let ball_pos =
+		{
+			bx: ball.x,
+			by: ball.y
+		}
+
+	    ws.send( JSON.stringify(ball_pos));
+	}
 
 
-	if (ball.x > win_w || ball.x < 0)
-		ball_x_dir = -ball_x_dir;
+	if (this.player1InputUP.isDown)
+	{
+		if (player_num == 1)
+		{
+			player1.y -= 1
+		}
+		else if (player_num == 2)
+		{
+			player2.y -= 1
+		}
+	}
 
-	if (ball.y > win_h || ball.y < 0)
-		ball_y_dir = -ball_y_dir;
+	if (this.player1InputDOWN.isDown)
+		if (player_num == 1)
+        {
+			player1.y += 1
+        }
+        else if (player_num == 2)
+        {
+		    player2.y += 1
+	    }
+
+
+	let player_pos = {};
+
+	if (player_num == 1)
+		player_pos.y = player1.y
+	else if (player_num == 2)
+		player_pos.y = player2.y
+
+	ws.send( JSON.stringify(player_pos));
+
 }	
 
 	</script>
